# web-nuts-rs

./: Cargo.toml  LICENSE_MIT  README.md  index.html  index.js  package-lock.json  package.json  styles.css  webpack.config.js
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: cd.yml  pr.yml
src/: chain.rs  lib.rs  model.rs  plot.rs  sampler.rs  utils.rs
src/model/: mod.rs  mv.rs  regression.rs
tests/: node.rs
